--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     <p>Hello, Netlify!!</p>
+    <a href="/.netlify/functions/hello"
+      >/.netlify/functions/hello</a
+    >
   </body>
 </html>
